<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">The Pants Party</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">The Pants Party</string>
    <string name="StartParty">Start Party</string>
    <string name="LearnToParty">Learn to Party</string>
    <string name="DoucheMode">Douche Mode</string>
    <string name="feature_5">Feature 5</string>
    <string name="feature_6">Feature 6</string>
    <string name="feature_1">Feature 1</string>
    <string name="feature_2">Feature 2</string>
    <string name="feature_3">Feature 3</string>
    <string name="feature_4">Feature 4</string>
    <string name="RealUltimateParty">Real Ultimate Party</string>
    <string name="PantsParty">Pants Party</string>
    <string name="exit">Exit</string>
</resources>
